// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sample round true 1`] = `
Array [
  .c0 {
  display: inline-block;
  padding: 8px 10px;
  margin: 0 auto;
  border-radius: 4px;
  box-sizing: border-box;
  background: #fff;
  border: solid 1px #888;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 8px 24px;
  border-radius: 24px;
}

<a
    className="c0"
    onClick={[Function]}
  >
    <div />
  </a>,
  <div
    onClick={[Function]}
  >
    (React Hooks) ClickCount: 
    0
  </div>,
  .c0 {
  display: inline-block;
  padding-right: 4px;
}

<div
    className="c0"
  >
    <img
      alt=""
      height="30px"
      src="jest-mock-js"
      width="30px"
    />
  </div>,
]
`;

exports[`Sample スナップショットテスト default 1`] = `
Array [
  .c0 {
  display: inline-block;
  padding: 8px 10px;
  margin: 0 auto;
  border-radius: 4px;
  box-sizing: border-box;
  background: #fff;
  border: solid 1px #888;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    className="c0"
    onClick={[Function]}
  >
    <div />
  </a>,
  <div
    onClick={[Function]}
  >
    (React Hooks) ClickCount: 
    0
  </div>,
  .c0 {
  display: inline-block;
  padding-right: 4px;
}

<div
    className="c0"
  >
    <img
      alt=""
      height="30px"
      src="jest-mock-js"
      width="30px"
    />
  </div>,
]
`;
